package Devialet.GetThePartyStarted;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message ConfigurationErrors {

 enum Codes {
  PowerActionFailed = 1;
  SetupActionFailed = 2;
  NoUpdateAvailable = 3;
  UpdaterIsBusy = 4;
  UpdateCheckFailed = 5;
 }
}

message DeviceInfo {
 required string productType = 1;
 required string serialNumber = 2;
 required string softwareVersion = 3;
 required string wiredInterfaceMacAddress = 4;
}

message SetupErrors {

 enum Codes {
  InvalidSetupToken = 1;
  InvalidOperationForState = 2;
  ConfigurationFailed = 3;
 }
}

message SetupToken {
 required bytes masterId = 1;
}

message SlaveInfo {
 required bytes id = 1;
 required string productType = 2;
}

message SlaveInfoList {
 repeated SlaveInfo slaves = 1;
}

message StartSetupRequest {
 required bytes masterId = 1;
 required string locale = 2;
 required string countryCode = 3;
 required bool force = 4;
}

message WiFiNetwork {

 enum SecurityMode {
  NoneMode = 1;
  WepMode = 2;
  WpaPskMode = 3;
  WpaEapMode = 4;
 }
 required bool devialetOwned = 1;
 required int32 priority = 2;
 required int32 securityMode = 3;
 required string ssid = 4;
 optional string wpaPassphrase = 5;
 optional bytes wpaPreSharedKey = 6;
 optional bytes wepKey = 7;
}

message WiFiConfigurationData {
 required bool enabled = 1;
 repeated WiFiNetwork networks = 2;
}

message PlcConfigurationData {
 required bool enabled = 1;
 required bytes key = 2;
}

message ConfigurationData {
 required WiFiConfigurationData wifi = 1;
 required PlcConfigurationData plc = 2;
}

message SetConfigurationRequest {
 required SetupToken token = 1;
 required ConfigurationData data = 2;
}

