package Devialet.IMASlave4U;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message AudioMode {

 enum Mode {
  MonoMix = 1;
  StereoLeft = 2;
  StereoRight = 3;
 }
 required uint32 mode = 1;
}

message Property {
 required string name = 1;
 required string value = 2;
}

message Input {
 required string name = 1;
 repeated string schemes = 2;
 repeated Property properties = 3;
}

