package Devialet.SaveMe;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message SavePlaylistError {

 enum Code {
  FileFailedUpdate = 1;
  IdPlaylistUnknown = 2;
  TrackNotFoundInPlaylist = 3;
 }
}

message Track {
 required string url = 1;
}

message PlaylistMsg {
 required bytes id = 1;
 required string name = 2;
 repeated Track tracks = 3;
 required uint32 creationDate = 4;
 required uint32 lastUpdateDate = 5;
}

message TrackInPlaylist {
 required Track track = 1;
 required uint32 index = 2;
}

message CreatePlaylist {
 required string name = 1;
 repeated Track tracks = 2;
 required uint32 date = 3;
}

message PlaylistSaved {
 repeated PlaylistMsg playlists = 1;
}

message PlaylistContent {
 repeated TrackInPlaylist tracks = 1;
}

message ModifyTracks {
 required bytes playlistId = 1;
 required uint32 index = 2;
 repeated Track tracks = 3;
 required uint32 date = 4;
}

message ModifyOneTrack {
 required bytes playlistId = 1;
 required TrackInPlaylist track = 2;
 required uint32 date = 3;
}

message ModifyPlaylistName {
 required bytes playlistId = 1;
 required string name = 2;
 required uint32 date = 3;
}

