package Devialet.TooManyFlows;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";
import "TooManyFlows/Identifier.proto";

message AddRendererQuery {
 required GroupId groupId = 1;
 required RendererId rendererId = 2;
}

message ConfigurationError {

 enum Code {
  LinkRendererFailed = 1;
  UnlinkRendererFailed = 2;
  BouquetIsEmpty = 3;
 }
}

