package Devialet.TooManyFlows;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message TrackMsg {
 required uint32 index = 1;
 required string url = 2;
}

message TracksMsg {
 repeated TrackMsg tracks = 1;
}

message MoveMsg {
 required TrackMsg first = 1;
 required TrackMsg second = 2;
}

