package Devialet.WhatsUp;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message RegistrarRegisterQuery {
 required bytes serverId = 1;
 required bool localOnly = 2;
 required string endpoint = 3;
 repeated string services = 4;
}

message RegistrarUnregisterQuery {
 required bytes serverId = 1;
}

message RegistrarServicesQuery {
 required bytes serverId = 1;
 repeated string services = 2;
}

message RegistrarPingQuery {
 required bytes serverId = 1;
}

message RegistrarErrors {

 enum Errors {
  AlreadyRegistered = 0;
  UnknownServer = 1;
 }
}

message WhatsUpNetwork {
 required string ip = 1;
 required int32 prefix = 2;
}

message WhatsUpNetworkInterface {
 required string name = 1;
 required bool isPrivate = 2;
 required int32 quality = 3;
 required int32 priority = 4;
 repeated WhatsUpNetwork networks = 5;
}

message WhatsUpHost {
 required bytes hostUid = 1;
 required bool hasProxy = 2;
 repeated WhatsUpNetworkInterface interfaces = 3;
}

message WhatsUpHostsList {
 repeated WhatsUpHost hosts = 1;
}

message WhatsUpService {
 required string name = 1;
 required bytes hostUid = 2;
 required bool localOnly = 3;
 required string endpoint = 4;
}

message WhatsUpServicesList {
 repeated WhatsUpService services = 1;
}

message WhatsUpServicesUpdate {
 repeated WhatsUpService services = 1;
 required uint32 reason = 2;
}

message WhatsUpServicesRemoval {
 repeated WhatsUpService services = 1;
 required uint32 reason = 2;
}

message RegistryLookupHostQuery {
 required bytes hostUid = 1;
}

message RegistryLookupHostReply {
 repeated string addresses = 1;
 repeated WhatsUpNetworkInterface interfaces = 2;
}

message RegistryFindServicesQuery {
 required string name = 1;
}

message RegistryNetworkConfigurationChangedNotification {
 required WhatsUpHost host = 1;
}

message RegistryHostUpdatedNotification {
 required WhatsUpHost host = 1;
}

