package Devialet.GetThePartyStarted.Player;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";
import "GetThePartyStarted/GetThePartyStarted.proto";

message WiFiNetwork {

 enum SecurityMode {
  NoneMode = 0;
  WepMode = 1;
  WpaMode = 2;
 }
 required string ssid = 1;
 required int32 securityMode = 2;
 required int32 signal = 3;
}

message ListWiFiNetworksReply {
 repeated WiFiNetwork networks = 1;
}

message EnableStandaloneAccessPointRequest {
 required string ssid = 1;
 required string passphrase = 2;
}

message SetupStep {

 enum Step {
  InvalidStep = 0;
  WaitingForSetup = 1;
  ConnectedToProductionNetwork = 2;
  BouquetConfiguration = 3;
  ServicesConfiguration = 4;
  Complete = 5;
 }
 required uint32 step = 1;
}

message OpticalModeParameters {

 enum Channel {
  Left = 1;
  Right = 2;
  LeftAndRight = 3;
 }
 required SetupToken token = 1;
 required uint32 channel = 2;
 required uint32 volume = 4;
}

message StandaloneConfiguration {

 enum Mode {
  OpticalMode = 1;
  MotionDesign = 2;
 }
 required uint32 mode = 1;
}

message AppleWacAccessPointConfiguration {
 required bytes appleCustomIE = 1;
}

message AppleWacWiFiNetworkConfiguration {
 required string ssid = 1;
 required bytes psk = 2;
}

