package Devialet.TooManyFlows;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message UrlMsg {
 required string url = 1;
}

message UrlsMsg {
 repeated UrlMsg tracks = 1;
}

