package Devialet.TooManyFlows;

import "CallMeMaybe/CallMeMaybe.proto";
import "CallMeMaybe/CommonMessages.proto";

message IndexMsg {
 required uint32 value = 1;
}

message ProgressionMsg {
 required int64 position = 1;
 required int64 duration = 2;
}

message StateMsg {

 enum Type {
  Paused = 1;
  Playing = 2;
  Stopped = 3;
 }
 required uint32 type = 1;
}

message SeekMsg {
 required int64 offset = 1;
}

message PlaybackError {

 enum Code {
  LinkRendererFailed = 1;
  UnlinkRendererFailed = 2;
  NoAvailablePlayback = 3;
  RequestAlreadyRunning = 4;
 }
}

