// Reversed by pbd (https://github.com/rsc-dev/pbd)
package Devialet.LeftAlone;

message FakeMsg {
}

service Configuration {
}